Update and rename test.md to 2018-02-18-test.md

--- a/_posts/2018-02-18-test.md
+++ b/_posts/2018-02-18-test.md
@@ -1,3 +1,9 @@
+---
+layout: post
+title:  "Test!"
+categories: blog 
+tags: test
+---
 # Upmath: Math Online Editor
 ### _Create web articles and&nbsp;blog posts with&nbsp;equations and&nbsp;diagrams_
 
